ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip
  namespace: rcaldas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/limit-connections: "5"
    nginx.ingress.kubernetes.io/limit-rpm: "10"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "5"
    nginx.ingress.kubernetes.io/server-snippet: |
      client_body_timeout 10s;
      client_header_timeout 10s;
spec:
  tls:
    - hosts:
      - ip.rcaldas.com
      secretName: ip-cert
  rules:
    - host: ip.rcaldas.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: ip
              port:
                number: 8000
